# airtable-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
airtable_scraper/: __init__.py  _logger_config.py  table_utils.py  typing.py
src/airtable_scraper/: _models.py  airtable_scraper.py
